// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers filterOptions should filter options for "c" 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "The name of the  contact",
  },
  Object {
    "name": "child",
    "summary": "Run details collected in a child flow, if any",
  },
]
`;

exports[`helpers filterOptions should filter options for "ch" 1`] = `
Array [
  Object {
    "name": "child",
    "summary": "Run details collected in a child flow, if any",
  },
]
`;

exports[`helpers filterOptions should filter options for "child" 1`] = `
Array [
  Object {
    "name": "child",
    "summary": "Run details collected in a child flow, if any",
  },
  Object {
    "name": "child.flow",
    "summary": "The flow in which a child run takes place",
  },
  Object {
    "name": "child.contact",
    "summary": "The name of the child run's contact",
  },
  Object {
    "name": "child.results",
    "summary": "Results collected in a child run",
  },
]
`;

exports[`helpers filterOptions should filter options for "child." 1`] = `
Array [
  Object {
    "name": "child.flow",
    "summary": "The flow in which a child run takes place",
  },
  Object {
    "name": "child.contact",
    "summary": "The name of the child run's contact",
  },
  Object {
    "name": "child.results",
    "summary": "Results collected in a child run",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.c" 1`] = `
Array [
  Object {
    "name": "child.contact",
    "summary": "The name of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.co" 1`] = `
Array [
  Object {
    "name": "child.contact",
    "summary": "The name of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact" 1`] = `
Array [
  Object {
    "name": "child.contact",
    "summary": "The name of the child run's contact",
  },
  Object {
    "name": "child.contact.first_name",
    "summary": "The first name of a child run's contact",
  },
  Object {
    "name": "child.contact.name",
    "summary": "The name of the child run's contact",
  },
  Object {
    "name": "child.contact.display",
    "summary": "The name or urn of the child run's contact",
  },
  Object {
    "name": "child.contact.fields",
    "summary": "Custom fields on a child run's contact",
  },
  Object {
    "name": "child.contact.urn",
    "summary": "The primary urn for a child run's contact",
  },
  Object {
    "name": "child.contact.language",
    "summary": "The language iso code for a child run's contact",
  },
  Object {
    "name": "child.contact.created_on",
    "summary": "The creation date for the child run's contact",
  },
  Object {
    "name": "child.contact.groups",
    "summary": "The groups a child run's contact is a member of",
  },
  Object {
    "name": "child.contact.urns",
    "summary": "The urns for a child run's contact",
  },
  Object {
    "name": "child.contact.uuid",
    "summary": "The uuid of the child run's contact",
  },
  Object {
    "name": "child.contact.channel",
    "summary": "A child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.c" 1`] = `
Array [
  Object {
    "name": "child.contact.created_on",
    "summary": "The creation date for the child run's contact",
  },
  Object {
    "name": "child.contact.channel",
    "summary": "A child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.ch" 1`] = `
Array [
  Object {
    "name": "child.contact.channel",
    "summary": "A child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel" 1`] = `
Array [
  Object {
    "name": "child.contact.channel",
    "summary": "A child run's contact's preferred channel",
  },
  Object {
    "name": "child.contact.channel.uuid",
    "summary": "The UUID of a child run's contact's preferred channel",
  },
  Object {
    "name": "child.contact.channel.name",
    "summary": "The name of a child run's contact's preferred channel",
  },
  Object {
    "name": "child.contact.channel.address",
    "summary": "The address of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel.a" 1`] = `
Array [
  Object {
    "name": "child.contact.channel.address",
    "summary": "The address of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel.ad" 1`] = `
Array [
  Object {
    "name": "child.contact.channel.address",
    "summary": "The address of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel.address" 1`] = `
Array [
  Object {
    "name": "child.contact.channel.address",
    "summary": "The address of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel.n" 1`] = `
Array [
  Object {
    "name": "child.contact.channel.name",
    "summary": "The name of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel.na" 1`] = `
Array [
  Object {
    "name": "child.contact.channel.name",
    "summary": "The name of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel.name" 1`] = `
Array [
  Object {
    "name": "child.contact.channel.name",
    "summary": "The name of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel.u" 1`] = `
Array [
  Object {
    "name": "child.contact.channel.uuid",
    "summary": "The UUID of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel.uu" 1`] = `
Array [
  Object {
    "name": "child.contact.channel.uuid",
    "summary": "The UUID of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.channel.uuid" 1`] = `
Array [
  Object {
    "name": "child.contact.channel.uuid",
    "summary": "The UUID of a child run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.cr" 1`] = `
Array [
  Object {
    "name": "child.contact.created_on",
    "summary": "The creation date for the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.created_on" 1`] = `
Array [
  Object {
    "name": "child.contact.created_on",
    "summary": "The creation date for the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.d" 1`] = `
Array [
  Object {
    "name": "child.contact.display",
    "summary": "The name or urn of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.di" 1`] = `
Array [
  Object {
    "name": "child.contact.display",
    "summary": "The name or urn of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.display" 1`] = `
Array [
  Object {
    "name": "child.contact.display",
    "summary": "The name or urn of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.f" 1`] = `
Array [
  Object {
    "name": "child.contact.first_name",
    "summary": "The first name of a child run's contact",
  },
  Object {
    "name": "child.contact.fields",
    "summary": "Custom fields on a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.fi" 1`] = `
Array [
  Object {
    "name": "child.contact.first_name",
    "summary": "The first name of a child run's contact",
  },
  Object {
    "name": "child.contact.fields",
    "summary": "Custom fields on a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.fields" 1`] = `
Array [
  Object {
    "name": "child.contact.fields",
    "summary": "Custom fields on a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.first_name" 1`] = `
Array [
  Object {
    "name": "child.contact.first_name",
    "summary": "The first name of a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.g" 1`] = `
Array [
  Object {
    "name": "child.contact.groups",
    "summary": "The groups a child run's contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.gr" 1`] = `
Array [
  Object {
    "name": "child.contact.groups",
    "summary": "The groups a child run's contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.groups" 1`] = `
Array [
  Object {
    "name": "child.contact.groups",
    "summary": "The groups a child run's contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.l" 1`] = `
Array [
  Object {
    "name": "child.contact.language",
    "summary": "The language iso code for a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.la" 1`] = `
Array [
  Object {
    "name": "child.contact.language",
    "summary": "The language iso code for a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.language" 1`] = `
Array [
  Object {
    "name": "child.contact.language",
    "summary": "The language iso code for a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.n" 1`] = `
Array [
  Object {
    "name": "child.contact.name",
    "summary": "The name of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.na" 1`] = `
Array [
  Object {
    "name": "child.contact.name",
    "summary": "The name of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.name" 1`] = `
Array [
  Object {
    "name": "child.contact.name",
    "summary": "The name of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.u" 1`] = `
Array [
  Object {
    "name": "child.contact.urn",
    "summary": "The primary urn for a child run's contact",
  },
  Object {
    "name": "child.contact.urns",
    "summary": "The urns for a child run's contact",
  },
  Object {
    "name": "child.contact.uuid",
    "summary": "The uuid of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.ur" 1`] = `
Array [
  Object {
    "name": "child.contact.urn",
    "summary": "The primary urn for a child run's contact",
  },
  Object {
    "name": "child.contact.urns",
    "summary": "The urns for a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.urn" 1`] = `
Array [
  Object {
    "name": "child.contact.urn",
    "summary": "The primary urn for a child run's contact",
  },
  Object {
    "name": "child.contact.urns",
    "summary": "The urns for a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.urns" 1`] = `
Array [
  Object {
    "name": "child.contact.urns",
    "summary": "The urns for a child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.uu" 1`] = `
Array [
  Object {
    "name": "child.contact.uuid",
    "summary": "The uuid of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.contact.uuid" 1`] = `
Array [
  Object {
    "name": "child.contact.uuid",
    "summary": "The uuid of the child run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.f" 1`] = `
Array [
  Object {
    "name": "child.flow",
    "summary": "The flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.fl" 1`] = `
Array [
  Object {
    "name": "child.flow",
    "summary": "The flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow" 1`] = `
Array [
  Object {
    "name": "child.flow",
    "summary": "The flow in which a child run takes place",
  },
  Object {
    "name": "child.flow.uuid",
    "summary": "The UUID of the flow in which a child run takes place",
  },
  Object {
    "name": "child.flow.name",
    "summary": "The name of the flow in which a child run takes place",
  },
  Object {
    "name": "child.flow.revision",
    "summary": "The revision number of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow.n" 1`] = `
Array [
  Object {
    "name": "child.flow.name",
    "summary": "The name of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow.na" 1`] = `
Array [
  Object {
    "name": "child.flow.name",
    "summary": "The name of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow.name" 1`] = `
Array [
  Object {
    "name": "child.flow.name",
    "summary": "The name of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow.r" 1`] = `
Array [
  Object {
    "name": "child.flow.revision",
    "summary": "The revision number of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow.re" 1`] = `
Array [
  Object {
    "name": "child.flow.revision",
    "summary": "The revision number of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow.revision" 1`] = `
Array [
  Object {
    "name": "child.flow.revision",
    "summary": "The revision number of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow.u" 1`] = `
Array [
  Object {
    "name": "child.flow.uuid",
    "summary": "The UUID of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow.uu" 1`] = `
Array [
  Object {
    "name": "child.flow.uuid",
    "summary": "The UUID of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.flow.uuid" 1`] = `
Array [
  Object {
    "name": "child.flow.uuid",
    "summary": "The UUID of the flow in which a child run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.r" 1`] = `
Array [
  Object {
    "name": "child.results",
    "summary": "Results collected in a child run",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.re" 1`] = `
Array [
  Object {
    "name": "child.results",
    "summary": "Results collected in a child run",
  },
]
`;

exports[`helpers filterOptions should filter options for "child.results" 1`] = `
Array [
  Object {
    "name": "child.results",
    "summary": "Results collected in a child run",
  },
]
`;

exports[`helpers filterOptions should filter options for "co" 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "The name of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact" 1`] = `
Array [
  Object {
    "name": "contact",
    "summary": "The name of the  contact",
  },
  Object {
    "name": "contact.first_name",
    "summary": "The first name of a  contact",
  },
  Object {
    "name": "contact.name",
    "summary": "The name of the  contact",
  },
  Object {
    "name": "contact.display",
    "summary": "The name or urn of the  contact",
  },
  Object {
    "name": "contact.fields",
    "summary": "Custom fields on a  contact",
  },
  Object {
    "name": "contact.urn",
    "summary": "The primary urn for a  contact",
  },
  Object {
    "name": "contact.language",
    "summary": "The language iso code for a  contact",
  },
  Object {
    "name": "contact.created_on",
    "summary": "The creation date for the  contact",
  },
  Object {
    "name": "contact.groups",
    "summary": "The groups a  contact is a member of",
  },
  Object {
    "name": "contact.urns",
    "summary": "The urns for a  contact",
  },
  Object {
    "name": "contact.uuid",
    "summary": "The uuid of the  contact",
  },
  Object {
    "name": "contact.channel",
    "summary": "A  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact." 1`] = `
Array [
  Object {
    "name": "contact.first_name",
    "summary": "The first name of a  contact",
  },
  Object {
    "name": "contact.name",
    "summary": "The name of the  contact",
  },
  Object {
    "name": "contact.display",
    "summary": "The name or urn of the  contact",
  },
  Object {
    "name": "contact.fields",
    "summary": "Custom fields on a  contact",
  },
  Object {
    "name": "contact.urn",
    "summary": "The primary urn for a  contact",
  },
  Object {
    "name": "contact.language",
    "summary": "The language iso code for a  contact",
  },
  Object {
    "name": "contact.created_on",
    "summary": "The creation date for the  contact",
  },
  Object {
    "name": "contact.groups",
    "summary": "The groups a  contact is a member of",
  },
  Object {
    "name": "contact.urns",
    "summary": "The urns for a  contact",
  },
  Object {
    "name": "contact.uuid",
    "summary": "The uuid of the  contact",
  },
  Object {
    "name": "contact.channel",
    "summary": "A  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.c" 1`] = `
Array [
  Object {
    "name": "contact.created_on",
    "summary": "The creation date for the  contact",
  },
  Object {
    "name": "contact.channel",
    "summary": "A  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.ch" 1`] = `
Array [
  Object {
    "name": "contact.channel",
    "summary": "A  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel" 1`] = `
Array [
  Object {
    "name": "contact.channel",
    "summary": "A  contact's preferred channel",
  },
  Object {
    "name": "contact.channel.uuid",
    "summary": "The UUID of a  contact's preferred channel",
  },
  Object {
    "name": "contact.channel.name",
    "summary": "The name of a  contact's preferred channel",
  },
  Object {
    "name": "contact.channel.address",
    "summary": "The address of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel.a" 1`] = `
Array [
  Object {
    "name": "contact.channel.address",
    "summary": "The address of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel.ad" 1`] = `
Array [
  Object {
    "name": "contact.channel.address",
    "summary": "The address of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel.address" 1`] = `
Array [
  Object {
    "name": "contact.channel.address",
    "summary": "The address of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel.n" 1`] = `
Array [
  Object {
    "name": "contact.channel.name",
    "summary": "The name of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel.na" 1`] = `
Array [
  Object {
    "name": "contact.channel.name",
    "summary": "The name of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel.name" 1`] = `
Array [
  Object {
    "name": "contact.channel.name",
    "summary": "The name of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel.u" 1`] = `
Array [
  Object {
    "name": "contact.channel.uuid",
    "summary": "The UUID of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel.uu" 1`] = `
Array [
  Object {
    "name": "contact.channel.uuid",
    "summary": "The UUID of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.channel.uuid" 1`] = `
Array [
  Object {
    "name": "contact.channel.uuid",
    "summary": "The UUID of a  contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.cr" 1`] = `
Array [
  Object {
    "name": "contact.created_on",
    "summary": "The creation date for the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.created_on" 1`] = `
Array [
  Object {
    "name": "contact.created_on",
    "summary": "The creation date for the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.d" 1`] = `
Array [
  Object {
    "name": "contact.display",
    "summary": "The name or urn of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.di" 1`] = `
Array [
  Object {
    "name": "contact.display",
    "summary": "The name or urn of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.display" 1`] = `
Array [
  Object {
    "name": "contact.display",
    "summary": "The name or urn of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.f" 1`] = `
Array [
  Object {
    "name": "contact.first_name",
    "summary": "The first name of a  contact",
  },
  Object {
    "name": "contact.fields",
    "summary": "Custom fields on a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.fi" 1`] = `
Array [
  Object {
    "name": "contact.first_name",
    "summary": "The first name of a  contact",
  },
  Object {
    "name": "contact.fields",
    "summary": "Custom fields on a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.fields" 1`] = `
Array [
  Object {
    "name": "contact.fields",
    "summary": "Custom fields on a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.first_name" 1`] = `
Array [
  Object {
    "name": "contact.first_name",
    "summary": "The first name of a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.g" 1`] = `
Array [
  Object {
    "name": "contact.groups",
    "summary": "The groups a  contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.gr" 1`] = `
Array [
  Object {
    "name": "contact.groups",
    "summary": "The groups a  contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.groups" 1`] = `
Array [
  Object {
    "name": "contact.groups",
    "summary": "The groups a  contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.l" 1`] = `
Array [
  Object {
    "name": "contact.language",
    "summary": "The language iso code for a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.la" 1`] = `
Array [
  Object {
    "name": "contact.language",
    "summary": "The language iso code for a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.language" 1`] = `
Array [
  Object {
    "name": "contact.language",
    "summary": "The language iso code for a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.n" 1`] = `
Array [
  Object {
    "name": "contact.name",
    "summary": "The name of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.na" 1`] = `
Array [
  Object {
    "name": "contact.name",
    "summary": "The name of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.name" 1`] = `
Array [
  Object {
    "name": "contact.name",
    "summary": "The name of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.u" 1`] = `
Array [
  Object {
    "name": "contact.urn",
    "summary": "The primary urn for a  contact",
  },
  Object {
    "name": "contact.urns",
    "summary": "The urns for a  contact",
  },
  Object {
    "name": "contact.uuid",
    "summary": "The uuid of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.ur" 1`] = `
Array [
  Object {
    "name": "contact.urn",
    "summary": "The primary urn for a  contact",
  },
  Object {
    "name": "contact.urns",
    "summary": "The urns for a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.urn" 1`] = `
Array [
  Object {
    "name": "contact.urn",
    "summary": "The primary urn for a  contact",
  },
  Object {
    "name": "contact.urns",
    "summary": "The urns for a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.urns" 1`] = `
Array [
  Object {
    "name": "contact.urns",
    "summary": "The urns for a  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.uu" 1`] = `
Array [
  Object {
    "name": "contact.uuid",
    "summary": "The uuid of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "contact.uuid" 1`] = `
Array [
  Object {
    "name": "contact.uuid",
    "summary": "The uuid of the  contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "f" 1`] = `
Array [
  Object {
    "name": "fields",
    "summary": "The custom fields for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "fi" 1`] = `
Array [
  Object {
    "name": "fields",
    "summary": "The custom fields for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "fields" 1`] = `
Array [
  Object {
    "name": "fields",
    "summary": "The custom fields for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "fields." 1`] = `Array []`;

exports[`helpers filterOptions should filter options for "i" 1`] = `
Array [
  Object {
    "name": "input",
    "summary": "The most recent input",
  },
]
`;

exports[`helpers filterOptions should filter options for "in" 1`] = `
Array [
  Object {
    "name": "input",
    "summary": "The most recent input",
  },
]
`;

exports[`helpers filterOptions should filter options for "input" 1`] = `
Array [
  Object {
    "name": "input",
    "summary": "The most recent input",
  },
  Object {
    "name": "input.uuid",
    "summary": "The UUID of the last input",
  },
  Object {
    "name": "input.type",
    "summary": "The type of the last input",
  },
  Object {
    "name": "input.channel",
    "summary": "The channel the last input was received on",
  },
  Object {
    "name": "input.created_on",
    "summary": "The date of the last input",
  },
  Object {
    "name": "input.text",
    "summary": "The text from the last message",
  },
  Object {
    "name": "input.attachments",
    "summary": "The attachments from the last message",
  },
]
`;

exports[`helpers filterOptions should filter options for "input." 1`] = `
Array [
  Object {
    "name": "input.uuid",
    "summary": "The UUID of the last input",
  },
  Object {
    "name": "input.type",
    "summary": "The type of the last input",
  },
  Object {
    "name": "input.channel",
    "summary": "The channel the last input was received on",
  },
  Object {
    "name": "input.created_on",
    "summary": "The date of the last input",
  },
  Object {
    "name": "input.text",
    "summary": "The text from the last message",
  },
  Object {
    "name": "input.attachments",
    "summary": "The attachments from the last message",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.a" 1`] = `
Array [
  Object {
    "name": "input.attachments",
    "summary": "The attachments from the last message",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.at" 1`] = `
Array [
  Object {
    "name": "input.attachments",
    "summary": "The attachments from the last message",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.attachments" 1`] = `
Array [
  Object {
    "name": "input.attachments",
    "summary": "The attachments from the last message",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.c" 1`] = `
Array [
  Object {
    "name": "input.channel",
    "summary": "The channel the last input was received on",
  },
  Object {
    "name": "input.created_on",
    "summary": "The date of the last input",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.ch" 1`] = `
Array [
  Object {
    "name": "input.channel",
    "summary": "The channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel" 1`] = `
Array [
  Object {
    "name": "input.channel",
    "summary": "The channel the last input was received on",
  },
  Object {
    "name": "input.channel.address",
    "summary": "The channel the last input was received on",
  },
  Object {
    "name": "input.channel.name",
    "summary": "The name of the channel the last input was received on",
  },
  Object {
    "name": "input.channel.uuid",
    "summary": "The uuid of the channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel.a" 1`] = `
Array [
  Object {
    "name": "input.channel.address",
    "summary": "The channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel.ad" 1`] = `
Array [
  Object {
    "name": "input.channel.address",
    "summary": "The channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel.address" 1`] = `
Array [
  Object {
    "name": "input.channel.address",
    "summary": "The channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel.n" 1`] = `
Array [
  Object {
    "name": "input.channel.name",
    "summary": "The name of the channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel.na" 1`] = `
Array [
  Object {
    "name": "input.channel.name",
    "summary": "The name of the channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel.name" 1`] = `
Array [
  Object {
    "name": "input.channel.name",
    "summary": "The name of the channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel.u" 1`] = `
Array [
  Object {
    "name": "input.channel.uuid",
    "summary": "The uuid of the channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel.uu" 1`] = `
Array [
  Object {
    "name": "input.channel.uuid",
    "summary": "The uuid of the channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.channel.uuid" 1`] = `
Array [
  Object {
    "name": "input.channel.uuid",
    "summary": "The uuid of the channel the last input was received on",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.cr" 1`] = `
Array [
  Object {
    "name": "input.created_on",
    "summary": "The date of the last input",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.created_on" 1`] = `
Array [
  Object {
    "name": "input.created_on",
    "summary": "The date of the last input",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.t" 1`] = `
Array [
  Object {
    "name": "input.type",
    "summary": "The type of the last input",
  },
  Object {
    "name": "input.text",
    "summary": "The text from the last message",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.te" 1`] = `
Array [
  Object {
    "name": "input.text",
    "summary": "The text from the last message",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.text" 1`] = `
Array [
  Object {
    "name": "input.text",
    "summary": "The text from the last message",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.ty" 1`] = `
Array [
  Object {
    "name": "input.type",
    "summary": "The type of the last input",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.type" 1`] = `
Array [
  Object {
    "name": "input.type",
    "summary": "The type of the last input",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.u" 1`] = `
Array [
  Object {
    "name": "input.uuid",
    "summary": "The UUID of the last input",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.uu" 1`] = `
Array [
  Object {
    "name": "input.uuid",
    "summary": "The UUID of the last input",
  },
]
`;

exports[`helpers filterOptions should filter options for "input.uuid" 1`] = `
Array [
  Object {
    "name": "input.uuid",
    "summary": "The UUID of the last input",
  },
]
`;

exports[`helpers filterOptions should filter options for "p" 1`] = `
Array [
  Object {
    "name": "parent",
    "summary": "Run details collected by a parent flow, if any",
  },
]
`;

exports[`helpers filterOptions should filter options for "pa" 1`] = `
Array [
  Object {
    "name": "parent",
    "summary": "Run details collected by a parent flow, if any",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent" 1`] = `
Array [
  Object {
    "name": "parent",
    "summary": "Run details collected by a parent flow, if any",
  },
  Object {
    "name": "parent.flow",
    "summary": "The flow in which a parent run takes place",
  },
  Object {
    "name": "parent.contact",
    "summary": "The name of the parent run's contact",
  },
  Object {
    "name": "parent.results",
    "summary": "Results collected in a parent run",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent." 1`] = `
Array [
  Object {
    "name": "parent.flow",
    "summary": "The flow in which a parent run takes place",
  },
  Object {
    "name": "parent.contact",
    "summary": "The name of the parent run's contact",
  },
  Object {
    "name": "parent.results",
    "summary": "Results collected in a parent run",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.c" 1`] = `
Array [
  Object {
    "name": "parent.contact",
    "summary": "The name of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.co" 1`] = `
Array [
  Object {
    "name": "parent.contact",
    "summary": "The name of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact" 1`] = `
Array [
  Object {
    "name": "parent.contact",
    "summary": "The name of the parent run's contact",
  },
  Object {
    "name": "parent.contact.first_name",
    "summary": "The first name of a parent run's contact",
  },
  Object {
    "name": "parent.contact.name",
    "summary": "The name of the parent run's contact",
  },
  Object {
    "name": "parent.contact.display",
    "summary": "The name or urn of the parent run's contact",
  },
  Object {
    "name": "parent.contact.fields",
    "summary": "Custom fields on a parent run's contact",
  },
  Object {
    "name": "parent.contact.urn",
    "summary": "The primary urn for a parent run's contact",
  },
  Object {
    "name": "parent.contact.language",
    "summary": "The language iso code for a parent run's contact",
  },
  Object {
    "name": "parent.contact.created_on",
    "summary": "The creation date for the parent run's contact",
  },
  Object {
    "name": "parent.contact.groups",
    "summary": "The groups a parent run's contact is a member of",
  },
  Object {
    "name": "parent.contact.urns",
    "summary": "The urns for a parent run's contact",
  },
  Object {
    "name": "parent.contact.uuid",
    "summary": "The uuid of the parent run's contact",
  },
  Object {
    "name": "parent.contact.channel",
    "summary": "A parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.c" 1`] = `
Array [
  Object {
    "name": "parent.contact.created_on",
    "summary": "The creation date for the parent run's contact",
  },
  Object {
    "name": "parent.contact.channel",
    "summary": "A parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.ch" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel",
    "summary": "A parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel",
    "summary": "A parent run's contact's preferred channel",
  },
  Object {
    "name": "parent.contact.channel.uuid",
    "summary": "The UUID of a parent run's contact's preferred channel",
  },
  Object {
    "name": "parent.contact.channel.name",
    "summary": "The name of a parent run's contact's preferred channel",
  },
  Object {
    "name": "parent.contact.channel.address",
    "summary": "The address of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel.a" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel.address",
    "summary": "The address of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel.ad" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel.address",
    "summary": "The address of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel.address" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel.address",
    "summary": "The address of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel.n" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel.name",
    "summary": "The name of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel.na" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel.name",
    "summary": "The name of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel.name" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel.name",
    "summary": "The name of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel.u" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel.uuid",
    "summary": "The UUID of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel.uu" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel.uuid",
    "summary": "The UUID of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.channel.uuid" 1`] = `
Array [
  Object {
    "name": "parent.contact.channel.uuid",
    "summary": "The UUID of a parent run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.cr" 1`] = `
Array [
  Object {
    "name": "parent.contact.created_on",
    "summary": "The creation date for the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.created_on" 1`] = `
Array [
  Object {
    "name": "parent.contact.created_on",
    "summary": "The creation date for the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.d" 1`] = `
Array [
  Object {
    "name": "parent.contact.display",
    "summary": "The name or urn of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.di" 1`] = `
Array [
  Object {
    "name": "parent.contact.display",
    "summary": "The name or urn of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.display" 1`] = `
Array [
  Object {
    "name": "parent.contact.display",
    "summary": "The name or urn of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.f" 1`] = `
Array [
  Object {
    "name": "parent.contact.first_name",
    "summary": "The first name of a parent run's contact",
  },
  Object {
    "name": "parent.contact.fields",
    "summary": "Custom fields on a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.fi" 1`] = `
Array [
  Object {
    "name": "parent.contact.first_name",
    "summary": "The first name of a parent run's contact",
  },
  Object {
    "name": "parent.contact.fields",
    "summary": "Custom fields on a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.fields" 1`] = `
Array [
  Object {
    "name": "parent.contact.fields",
    "summary": "Custom fields on a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.first_name" 1`] = `
Array [
  Object {
    "name": "parent.contact.first_name",
    "summary": "The first name of a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.g" 1`] = `
Array [
  Object {
    "name": "parent.contact.groups",
    "summary": "The groups a parent run's contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.gr" 1`] = `
Array [
  Object {
    "name": "parent.contact.groups",
    "summary": "The groups a parent run's contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.groups" 1`] = `
Array [
  Object {
    "name": "parent.contact.groups",
    "summary": "The groups a parent run's contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.l" 1`] = `
Array [
  Object {
    "name": "parent.contact.language",
    "summary": "The language iso code for a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.la" 1`] = `
Array [
  Object {
    "name": "parent.contact.language",
    "summary": "The language iso code for a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.language" 1`] = `
Array [
  Object {
    "name": "parent.contact.language",
    "summary": "The language iso code for a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.n" 1`] = `
Array [
  Object {
    "name": "parent.contact.name",
    "summary": "The name of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.na" 1`] = `
Array [
  Object {
    "name": "parent.contact.name",
    "summary": "The name of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.name" 1`] = `
Array [
  Object {
    "name": "parent.contact.name",
    "summary": "The name of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.u" 1`] = `
Array [
  Object {
    "name": "parent.contact.urn",
    "summary": "The primary urn for a parent run's contact",
  },
  Object {
    "name": "parent.contact.urns",
    "summary": "The urns for a parent run's contact",
  },
  Object {
    "name": "parent.contact.uuid",
    "summary": "The uuid of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.ur" 1`] = `
Array [
  Object {
    "name": "parent.contact.urn",
    "summary": "The primary urn for a parent run's contact",
  },
  Object {
    "name": "parent.contact.urns",
    "summary": "The urns for a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.urn" 1`] = `
Array [
  Object {
    "name": "parent.contact.urn",
    "summary": "The primary urn for a parent run's contact",
  },
  Object {
    "name": "parent.contact.urns",
    "summary": "The urns for a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.urns" 1`] = `
Array [
  Object {
    "name": "parent.contact.urns",
    "summary": "The urns for a parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.uu" 1`] = `
Array [
  Object {
    "name": "parent.contact.uuid",
    "summary": "The uuid of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.contact.uuid" 1`] = `
Array [
  Object {
    "name": "parent.contact.uuid",
    "summary": "The uuid of the parent run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.f" 1`] = `
Array [
  Object {
    "name": "parent.flow",
    "summary": "The flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.fl" 1`] = `
Array [
  Object {
    "name": "parent.flow",
    "summary": "The flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow" 1`] = `
Array [
  Object {
    "name": "parent.flow",
    "summary": "The flow in which a parent run takes place",
  },
  Object {
    "name": "parent.flow.uuid",
    "summary": "The UUID of the flow in which a parent run takes place",
  },
  Object {
    "name": "parent.flow.name",
    "summary": "The name of the flow in which a parent run takes place",
  },
  Object {
    "name": "parent.flow.revision",
    "summary": "The revision number of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow.n" 1`] = `
Array [
  Object {
    "name": "parent.flow.name",
    "summary": "The name of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow.na" 1`] = `
Array [
  Object {
    "name": "parent.flow.name",
    "summary": "The name of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow.name" 1`] = `
Array [
  Object {
    "name": "parent.flow.name",
    "summary": "The name of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow.r" 1`] = `
Array [
  Object {
    "name": "parent.flow.revision",
    "summary": "The revision number of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow.re" 1`] = `
Array [
  Object {
    "name": "parent.flow.revision",
    "summary": "The revision number of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow.revision" 1`] = `
Array [
  Object {
    "name": "parent.flow.revision",
    "summary": "The revision number of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow.u" 1`] = `
Array [
  Object {
    "name": "parent.flow.uuid",
    "summary": "The UUID of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow.uu" 1`] = `
Array [
  Object {
    "name": "parent.flow.uuid",
    "summary": "The UUID of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.flow.uuid" 1`] = `
Array [
  Object {
    "name": "parent.flow.uuid",
    "summary": "The UUID of the flow in which a parent run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.r" 1`] = `
Array [
  Object {
    "name": "parent.results",
    "summary": "Results collected in a parent run",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.re" 1`] = `
Array [
  Object {
    "name": "parent.results",
    "summary": "Results collected in a parent run",
  },
]
`;

exports[`helpers filterOptions should filter options for "parent.results" 1`] = `
Array [
  Object {
    "name": "parent.results",
    "summary": "Results collected in a parent run",
  },
]
`;

exports[`helpers filterOptions should filter options for "r" 1`] = `
Array [
  Object {
    "name": "results",
    "summary": "The results for the current run",
  },
  Object {
    "name": "run",
    "summary": "A run in this flow",
  },
]
`;

exports[`helpers filterOptions should filter options for "re" 1`] = `
Array [
  Object {
    "name": "results",
    "summary": "The results for the current run",
  },
]
`;

exports[`helpers filterOptions should filter options for "results" 1`] = `
Array [
  Object {
    "name": "results",
    "summary": "The results for the current run",
  },
]
`;

exports[`helpers filterOptions should filter options for "results." 1`] = `Array []`;

exports[`helpers filterOptions should filter options for "ru" 1`] = `
Array [
  Object {
    "name": "run",
    "summary": "A run in this flow",
  },
]
`;

exports[`helpers filterOptions should filter options for "run" 1`] = `
Array [
  Object {
    "name": "run",
    "summary": "A run in this flow",
  },
  Object {
    "name": "run.flow",
    "summary": "The flow in which a  run takes place",
  },
  Object {
    "name": "run.contact",
    "summary": "The name of the run's contact",
  },
  Object {
    "name": "run.results",
    "summary": "Results collected in a  run",
  },
]
`;

exports[`helpers filterOptions should filter options for "run." 1`] = `
Array [
  Object {
    "name": "run.flow",
    "summary": "The flow in which a  run takes place",
  },
  Object {
    "name": "run.contact",
    "summary": "The name of the run's contact",
  },
  Object {
    "name": "run.results",
    "summary": "Results collected in a  run",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.c" 1`] = `
Array [
  Object {
    "name": "run.contact",
    "summary": "The name of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.co" 1`] = `
Array [
  Object {
    "name": "run.contact",
    "summary": "The name of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact" 1`] = `
Array [
  Object {
    "name": "run.contact",
    "summary": "The name of the run's contact",
  },
  Object {
    "name": "run.contact.first_name",
    "summary": "The first name of a run's contact",
  },
  Object {
    "name": "run.contact.name",
    "summary": "The name of the run's contact",
  },
  Object {
    "name": "run.contact.display",
    "summary": "The name or urn of the run's contact",
  },
  Object {
    "name": "run.contact.fields",
    "summary": "Custom fields on a run's contact",
  },
  Object {
    "name": "run.contact.urn",
    "summary": "The primary urn for a run's contact",
  },
  Object {
    "name": "run.contact.language",
    "summary": "The language iso code for a run's contact",
  },
  Object {
    "name": "run.contact.created_on",
    "summary": "The creation date for the run's contact",
  },
  Object {
    "name": "run.contact.groups",
    "summary": "The groups a run's contact is a member of",
  },
  Object {
    "name": "run.contact.urns",
    "summary": "The urns for a run's contact",
  },
  Object {
    "name": "run.contact.uuid",
    "summary": "The uuid of the run's contact",
  },
  Object {
    "name": "run.contact.channel",
    "summary": "A run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.c" 1`] = `
Array [
  Object {
    "name": "run.contact.created_on",
    "summary": "The creation date for the run's contact",
  },
  Object {
    "name": "run.contact.channel",
    "summary": "A run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.ch" 1`] = `
Array [
  Object {
    "name": "run.contact.channel",
    "summary": "A run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel" 1`] = `
Array [
  Object {
    "name": "run.contact.channel",
    "summary": "A run's contact's preferred channel",
  },
  Object {
    "name": "run.contact.channel.uuid",
    "summary": "The UUID of a run's contact's preferred channel",
  },
  Object {
    "name": "run.contact.channel.name",
    "summary": "The name of a run's contact's preferred channel",
  },
  Object {
    "name": "run.contact.channel.address",
    "summary": "The address of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel.a" 1`] = `
Array [
  Object {
    "name": "run.contact.channel.address",
    "summary": "The address of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel.ad" 1`] = `
Array [
  Object {
    "name": "run.contact.channel.address",
    "summary": "The address of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel.address" 1`] = `
Array [
  Object {
    "name": "run.contact.channel.address",
    "summary": "The address of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel.n" 1`] = `
Array [
  Object {
    "name": "run.contact.channel.name",
    "summary": "The name of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel.na" 1`] = `
Array [
  Object {
    "name": "run.contact.channel.name",
    "summary": "The name of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel.name" 1`] = `
Array [
  Object {
    "name": "run.contact.channel.name",
    "summary": "The name of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel.u" 1`] = `
Array [
  Object {
    "name": "run.contact.channel.uuid",
    "summary": "The UUID of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel.uu" 1`] = `
Array [
  Object {
    "name": "run.contact.channel.uuid",
    "summary": "The UUID of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.channel.uuid" 1`] = `
Array [
  Object {
    "name": "run.contact.channel.uuid",
    "summary": "The UUID of a run's contact's preferred channel",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.cr" 1`] = `
Array [
  Object {
    "name": "run.contact.created_on",
    "summary": "The creation date for the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.created_on" 1`] = `
Array [
  Object {
    "name": "run.contact.created_on",
    "summary": "The creation date for the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.d" 1`] = `
Array [
  Object {
    "name": "run.contact.display",
    "summary": "The name or urn of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.di" 1`] = `
Array [
  Object {
    "name": "run.contact.display",
    "summary": "The name or urn of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.display" 1`] = `
Array [
  Object {
    "name": "run.contact.display",
    "summary": "The name or urn of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.f" 1`] = `
Array [
  Object {
    "name": "run.contact.first_name",
    "summary": "The first name of a run's contact",
  },
  Object {
    "name": "run.contact.fields",
    "summary": "Custom fields on a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.fi" 1`] = `
Array [
  Object {
    "name": "run.contact.first_name",
    "summary": "The first name of a run's contact",
  },
  Object {
    "name": "run.contact.fields",
    "summary": "Custom fields on a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.fields" 1`] = `
Array [
  Object {
    "name": "run.contact.fields",
    "summary": "Custom fields on a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.first_name" 1`] = `
Array [
  Object {
    "name": "run.contact.first_name",
    "summary": "The first name of a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.g" 1`] = `
Array [
  Object {
    "name": "run.contact.groups",
    "summary": "The groups a run's contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.gr" 1`] = `
Array [
  Object {
    "name": "run.contact.groups",
    "summary": "The groups a run's contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.groups" 1`] = `
Array [
  Object {
    "name": "run.contact.groups",
    "summary": "The groups a run's contact is a member of",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.l" 1`] = `
Array [
  Object {
    "name": "run.contact.language",
    "summary": "The language iso code for a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.la" 1`] = `
Array [
  Object {
    "name": "run.contact.language",
    "summary": "The language iso code for a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.language" 1`] = `
Array [
  Object {
    "name": "run.contact.language",
    "summary": "The language iso code for a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.n" 1`] = `
Array [
  Object {
    "name": "run.contact.name",
    "summary": "The name of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.na" 1`] = `
Array [
  Object {
    "name": "run.contact.name",
    "summary": "The name of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.name" 1`] = `
Array [
  Object {
    "name": "run.contact.name",
    "summary": "The name of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.u" 1`] = `
Array [
  Object {
    "name": "run.contact.urn",
    "summary": "The primary urn for a run's contact",
  },
  Object {
    "name": "run.contact.urns",
    "summary": "The urns for a run's contact",
  },
  Object {
    "name": "run.contact.uuid",
    "summary": "The uuid of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.ur" 1`] = `
Array [
  Object {
    "name": "run.contact.urn",
    "summary": "The primary urn for a run's contact",
  },
  Object {
    "name": "run.contact.urns",
    "summary": "The urns for a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.urn" 1`] = `
Array [
  Object {
    "name": "run.contact.urn",
    "summary": "The primary urn for a run's contact",
  },
  Object {
    "name": "run.contact.urns",
    "summary": "The urns for a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.urns" 1`] = `
Array [
  Object {
    "name": "run.contact.urns",
    "summary": "The urns for a run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.uu" 1`] = `
Array [
  Object {
    "name": "run.contact.uuid",
    "summary": "The uuid of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.contact.uuid" 1`] = `
Array [
  Object {
    "name": "run.contact.uuid",
    "summary": "The uuid of the run's contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.f" 1`] = `
Array [
  Object {
    "name": "run.flow",
    "summary": "The flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.fl" 1`] = `
Array [
  Object {
    "name": "run.flow",
    "summary": "The flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow" 1`] = `
Array [
  Object {
    "name": "run.flow",
    "summary": "The flow in which a  run takes place",
  },
  Object {
    "name": "run.flow.uuid",
    "summary": "The UUID of the flow in which a  run takes place",
  },
  Object {
    "name": "run.flow.name",
    "summary": "The name of the flow in which a  run takes place",
  },
  Object {
    "name": "run.flow.revision",
    "summary": "The revision number of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow.n" 1`] = `
Array [
  Object {
    "name": "run.flow.name",
    "summary": "The name of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow.na" 1`] = `
Array [
  Object {
    "name": "run.flow.name",
    "summary": "The name of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow.name" 1`] = `
Array [
  Object {
    "name": "run.flow.name",
    "summary": "The name of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow.r" 1`] = `
Array [
  Object {
    "name": "run.flow.revision",
    "summary": "The revision number of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow.re" 1`] = `
Array [
  Object {
    "name": "run.flow.revision",
    "summary": "The revision number of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow.revision" 1`] = `
Array [
  Object {
    "name": "run.flow.revision",
    "summary": "The revision number of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow.u" 1`] = `
Array [
  Object {
    "name": "run.flow.uuid",
    "summary": "The UUID of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow.uu" 1`] = `
Array [
  Object {
    "name": "run.flow.uuid",
    "summary": "The UUID of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.flow.uuid" 1`] = `
Array [
  Object {
    "name": "run.flow.uuid",
    "summary": "The UUID of the flow in which a  run takes place",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.r" 1`] = `
Array [
  Object {
    "name": "run.results",
    "summary": "Results collected in a  run",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.re" 1`] = `
Array [
  Object {
    "name": "run.results",
    "summary": "Results collected in a  run",
  },
]
`;

exports[`helpers filterOptions should filter options for "run.results" 1`] = `
Array [
  Object {
    "name": "run.results",
    "summary": "Results collected in a  run",
  },
]
`;

exports[`helpers filterOptions should filter options for "t" 1`] = `
Array [
  Object {
    "name": "trigger",
    "summary": "A trigger that initiated a session",
  },
]
`;

exports[`helpers filterOptions should filter options for "tr" 1`] = `
Array [
  Object {
    "name": "trigger",
    "summary": "A trigger that initiated a session",
  },
]
`;

exports[`helpers filterOptions should filter options for "trigger" 1`] = `
Array [
  Object {
    "name": "trigger",
    "summary": "A trigger that initiated a session",
  },
  Object {
    "name": "trigger.type",
    "summary": "The type of a trigger, one of “manual” or “flow”",
  },
  Object {
    "name": "trigger.params",
    "summary": "The parameters passed to a trigger",
  },
]
`;

exports[`helpers filterOptions should filter options for "trigger." 1`] = `
Array [
  Object {
    "name": "trigger.type",
    "summary": "The type of a trigger, one of “manual” or “flow”",
  },
  Object {
    "name": "trigger.params",
    "summary": "The parameters passed to a trigger",
  },
]
`;

exports[`helpers filterOptions should filter options for "trigger.p" 1`] = `
Array [
  Object {
    "name": "trigger.params",
    "summary": "The parameters passed to a trigger",
  },
]
`;

exports[`helpers filterOptions should filter options for "trigger.pa" 1`] = `
Array [
  Object {
    "name": "trigger.params",
    "summary": "The parameters passed to a trigger",
  },
]
`;

exports[`helpers filterOptions should filter options for "trigger.params" 1`] = `
Array [
  Object {
    "name": "trigger.params",
    "summary": "The parameters passed to a trigger",
  },
]
`;

exports[`helpers filterOptions should filter options for "trigger.t" 1`] = `
Array [
  Object {
    "name": "trigger.type",
    "summary": "The type of a trigger, one of “manual” or “flow”",
  },
]
`;

exports[`helpers filterOptions should filter options for "trigger.ty" 1`] = `
Array [
  Object {
    "name": "trigger.type",
    "summary": "The type of a trigger, one of “manual” or “flow”",
  },
]
`;

exports[`helpers filterOptions should filter options for "trigger.type" 1`] = `
Array [
  Object {
    "name": "trigger.type",
    "summary": "The type of a trigger, one of “manual” or “flow”",
  },
]
`;

exports[`helpers filterOptions should filter options for "u" 1`] = `
Array [
  Object {
    "name": "urns",
    "summary": "The urns for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "ur" 1`] = `
Array [
  Object {
    "name": "urns",
    "summary": "The urns for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns" 1`] = `
Array [
  Object {
    "name": "urns",
    "summary": "The urns for the contact",
  },
  Object {
    "name": "urns.facebook",
    "summary": "The Facebook urn for the contact",
  },
  Object {
    "name": "urns.fcm",
    "summary": "The Firebase Cloud Messaging id for the contact",
  },
  Object {
    "name": "urns.jiochat",
    "summary": "The Jiochat id for the contact",
  },
  Object {
    "name": "urns.line",
    "summary": "The Line id for the contact",
  },
  Object {
    "name": "urns.mailto",
    "summary": "The email address for the contact",
  },
  Object {
    "name": "urns.tel",
    "summary": "The phone number for the contact",
  },
  Object {
    "name": "urns.telegram",
    "summary": "The Telegram id for the contact",
  },
  Object {
    "name": "urns.twitterid",
    "summary": "The Twitter id for the contact",
  },
  Object {
    "name": "urns.viber",
    "summary": "The Viber id for the contact",
  },
  Object {
    "name": "urns.wechat",
    "summary": "The Wechat id for the contact",
  },
  Object {
    "name": "urns.whatsapp",
    "summary": "The WhatsApp number for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns." 1`] = `
Array [
  Object {
    "name": "urns.facebook",
    "summary": "The Facebook urn for the contact",
  },
  Object {
    "name": "urns.fcm",
    "summary": "The Firebase Cloud Messaging id for the contact",
  },
  Object {
    "name": "urns.jiochat",
    "summary": "The Jiochat id for the contact",
  },
  Object {
    "name": "urns.line",
    "summary": "The Line id for the contact",
  },
  Object {
    "name": "urns.mailto",
    "summary": "The email address for the contact",
  },
  Object {
    "name": "urns.tel",
    "summary": "The phone number for the contact",
  },
  Object {
    "name": "urns.telegram",
    "summary": "The Telegram id for the contact",
  },
  Object {
    "name": "urns.twitterid",
    "summary": "The Twitter id for the contact",
  },
  Object {
    "name": "urns.viber",
    "summary": "The Viber id for the contact",
  },
  Object {
    "name": "urns.wechat",
    "summary": "The Wechat id for the contact",
  },
  Object {
    "name": "urns.whatsapp",
    "summary": "The WhatsApp number for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.f" 1`] = `
Array [
  Object {
    "name": "urns.facebook",
    "summary": "The Facebook urn for the contact",
  },
  Object {
    "name": "urns.fcm",
    "summary": "The Firebase Cloud Messaging id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.fa" 1`] = `
Array [
  Object {
    "name": "urns.facebook",
    "summary": "The Facebook urn for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.facebook" 1`] = `
Array [
  Object {
    "name": "urns.facebook",
    "summary": "The Facebook urn for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.fc" 1`] = `
Array [
  Object {
    "name": "urns.fcm",
    "summary": "The Firebase Cloud Messaging id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.fcm" 1`] = `
Array [
  Object {
    "name": "urns.fcm",
    "summary": "The Firebase Cloud Messaging id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.j" 1`] = `
Array [
  Object {
    "name": "urns.jiochat",
    "summary": "The Jiochat id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.ji" 1`] = `
Array [
  Object {
    "name": "urns.jiochat",
    "summary": "The Jiochat id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.jiochat" 1`] = `
Array [
  Object {
    "name": "urns.jiochat",
    "summary": "The Jiochat id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.l" 1`] = `
Array [
  Object {
    "name": "urns.line",
    "summary": "The Line id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.li" 1`] = `
Array [
  Object {
    "name": "urns.line",
    "summary": "The Line id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.line" 1`] = `
Array [
  Object {
    "name": "urns.line",
    "summary": "The Line id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.m" 1`] = `
Array [
  Object {
    "name": "urns.mailto",
    "summary": "The email address for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.ma" 1`] = `
Array [
  Object {
    "name": "urns.mailto",
    "summary": "The email address for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.mailto" 1`] = `
Array [
  Object {
    "name": "urns.mailto",
    "summary": "The email address for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.t" 1`] = `
Array [
  Object {
    "name": "urns.tel",
    "summary": "The phone number for the contact",
  },
  Object {
    "name": "urns.telegram",
    "summary": "The Telegram id for the contact",
  },
  Object {
    "name": "urns.twitterid",
    "summary": "The Twitter id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.te" 1`] = `
Array [
  Object {
    "name": "urns.tel",
    "summary": "The phone number for the contact",
  },
  Object {
    "name": "urns.telegram",
    "summary": "The Telegram id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.tel" 1`] = `
Array [
  Object {
    "name": "urns.tel",
    "summary": "The phone number for the contact",
  },
  Object {
    "name": "urns.telegram",
    "summary": "The Telegram id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.telegram" 1`] = `
Array [
  Object {
    "name": "urns.telegram",
    "summary": "The Telegram id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.tw" 1`] = `
Array [
  Object {
    "name": "urns.twitterid",
    "summary": "The Twitter id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.twitterid" 1`] = `
Array [
  Object {
    "name": "urns.twitterid",
    "summary": "The Twitter id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.v" 1`] = `
Array [
  Object {
    "name": "urns.viber",
    "summary": "The Viber id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.vi" 1`] = `
Array [
  Object {
    "name": "urns.viber",
    "summary": "The Viber id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.viber" 1`] = `
Array [
  Object {
    "name": "urns.viber",
    "summary": "The Viber id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.w" 1`] = `
Array [
  Object {
    "name": "urns.wechat",
    "summary": "The Wechat id for the contact",
  },
  Object {
    "name": "urns.whatsapp",
    "summary": "The WhatsApp number for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.we" 1`] = `
Array [
  Object {
    "name": "urns.wechat",
    "summary": "The Wechat id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.wechat" 1`] = `
Array [
  Object {
    "name": "urns.wechat",
    "summary": "The Wechat id for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.wh" 1`] = `
Array [
  Object {
    "name": "urns.whatsapp",
    "summary": "The WhatsApp number for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "urns.whatsapp" 1`] = `
Array [
  Object {
    "name": "urns.whatsapp",
    "summary": "The WhatsApp number for the contact",
  },
]
`;

exports[`helpers filterOptions should filter options for "w" 1`] = `
Array [
  Object {
    "name": "webhook",
    "summary": "The parsed JSON payload of the last webhook call",
  },
]
`;

exports[`helpers filterOptions should filter options for "we" 1`] = `
Array [
  Object {
    "name": "webhook",
    "summary": "The parsed JSON payload of the last webhook call",
  },
]
`;

exports[`helpers filterOptions should filter options for "webhook" 1`] = `
Array [
  Object {
    "name": "webhook",
    "summary": "The parsed JSON payload of the last webhook call",
  },
]
`;

exports[`helpers filterOptions should filter options for "webhook." 1`] = `Array []`;
